{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 41,
  "lineage": "7c11336b-4856-fe5b-acf8-7187a851f0f2",
  "resources": [
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:security-group/sg-07e0e6aee7f82e8bd",
            "description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "filter": null,
            "id": "sg-07e0e6aee7f82e8bd",
            "name": "eks-cluster-sg-prod-cluster-122465916",
            "tags": {
              "Name": "eks-cluster-sg-prod-cluster-122465916",
              "kubernetes.io/cluster/prod-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:internet-gateway/igw-0b4ebcfe54c05078a",
            "id": "igw-0b4ebcfe54c05078a",
            "owner_id": "143790590581",
            "tags": {
              "Name": "prod-vpc-igw"
            },
            "tags_all": {
              "Name": "prod-vpc-igw"
            },
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04106dab188c99e08",
            "arn": "arn:aws:ec2:eu-west-1:143790590581:elastic-ip/eipalloc-04106dab188c99e08",
            "domain": "vpc",
            "id": "eipalloc-04106dab188c99e08",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-31-39-123.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.39.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-natgw"
            },
            "tags_all": {
              "Name": "prod-natgw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04106dab188c99e08",
            "association_id": "eipassoc-0eabc763dc88f9a7a",
            "connectivity_type": "public",
            "id": "nat-0cbd6ef12c5ef35df",
            "network_interface_id": "eni-0355887cd197bec7a",
            "private_ip": "10.0.6.228",
            "public_ip": "52.31.39.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f59e215e3589979",
            "tags": {
              "Environment": "prod",
              "Name": "prod-natgw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-natgw"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:route-table/rtb-09125570dfc042ab5",
            "id": "rtb-09125570dfc042ab5",
            "owner_id": "143790590581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cbd6ef12c5ef35df",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b5b7c11d5b5dee5",
            "route_table_id": "rtb-09125570dfc042ab5",
            "subnet_id": "subnet-0c1dfaa9af35170e2"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.nat_gateway.aws_route_table.private",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcfe7f78f7b81876",
            "route_table_id": "rtb-09125570dfc042ab5",
            "subnet_id": "subnet-0341c876410b14938"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.nat_gateway.aws_route_table.private",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:security-group/sg-0f2dffbd50a7bcec5",
            "description": "Allow PostgreSQL access from EKS node SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2dffbd50a7bcec5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07e0e6aee7f82e8bd"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "prod_db-sg",
            "name_prefix": "",
            "owner_id": "143790590581",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod_db-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod_db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.eks.data.aws_eks_cluster.this",
            "module.eks.data.aws_security_group.eks_cluster_sg",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b4ebcfe54c05078a",
            "id": "r-rtb-0a0c7be53151b0c951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0c7be53151b0c95",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.route_table.aws_route_table.this",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:route-table/rtb-0a0c7be53151b0c95",
            "id": "rtb-0a0c7be53151b0c95",
            "owner_id": "143790590581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d1b072e0621ec32",
            "route_table_id": "rtb-0a0c7be53151b0c95",
            "subnet_id": "subnet-05f59e215e3589979"
          },
          "dependencies": [
            "module.route_table.aws_route_table.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a328d401ffcc2abc",
            "route_table_id": "rtb-0a0c7be53151b0c95",
            "subnet_id": "subnet-04552516b8ce8c0a9"
          },
          "dependencies": [
            "module.route_table.aws_route_table.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06acdddc66662323c",
            "route_table_id": "rtb-0a0c7be53151b0c95",
            "subnet_id": "subnet-0b8f6376f1e5453e7"
          },
          "dependencies": [
            "module.route_table.aws_route_table.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dce0be0181b1639",
            "route_table_id": "rtb-0a0c7be53151b0c95",
            "subnet_id": "subnet-03a1d1d521783692c"
          },
          "dependencies": [
            "module.route_table.aws_route_table.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:subnet/subnet-0c1dfaa9af35170e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1dfaa9af35170e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143790590581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1",
              "type": "private"
            },
            "tags_all": {
              "Name": "private-1",
              "type": "private"
            },
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:subnet/subnet-0341c876410b14938",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0341c876410b14938",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143790590581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2",
              "type": "private"
            },
            "tags_all": {
              "Name": "private-2",
              "type": "private"
            },
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:subnet/subnet-05f59e215e3589979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f59e215e3589979",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143790590581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-3",
              "type": "public"
            },
            "tags_all": {
              "Name": "private-3",
              "type": "public"
            },
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:subnet/subnet-04552516b8ce8c0a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04552516b8ce8c0a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143790590581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1",
              "type": "public"
            },
            "tags_all": {
              "Name": "public-1",
              "type": "public"
            },
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:subnet/subnet-0b8f6376f1e5453e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8f6376f1e5453e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143790590581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2",
              "type": "public"
            },
            "tags_all": {
              "Name": "public-2",
              "type": "public"
            },
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:subnet/subnet-03a1d1d521783692c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a1d1d521783692c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143790590581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-3",
              "type": "public"
            },
            "tags_all": {
              "Name": "public-3",
              "type": "public"
            },
            "vpc_id": "vpc-0a9189e5f35d6921d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:143790590581:vpc/vpc-0a9189e5f35d6921d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e66251a5d3e37dc",
            "default_route_table_id": "rtb-0962fd018364fc110",
            "default_security_group_id": "sg-0ec23dda9d462e4b1",
            "dhcp_options_id": "dopt-0248aa344a5b0d52d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9189e5f35d6921d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0962fd018364fc110",
            "owner_id": "143790590581",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}